UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Product_History_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Order_Price__c</fullName>
        <label>Direct Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPA_Floor_Price__c</fullName>
        <label>IPA Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lowest_Price_SKU__c</fullName>
        <label>Lowest Price /SKU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medicaid_Per_Unit__c</fullName>
        <label>Medicaid Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NDC_11__c</fullName>
        <label>NDC - 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_11_with_Dashes__c</fullName>
        <formula>IF(NOT(ISBLANK( NDC_11__c )),
IF((OR(BEGINS(NDC_11__c , &apos;55111&apos;),BEGINS(NDC_11__c , &apos;43598&apos;))),
LEFT( NDC_11__c , 5) +&apos;-&apos;+ MID( NDC_11__c, 6,4) +&apos;-&apos;+ RIGHT(NDC_11__c, 2),LEFT( NDC_11__c , 5) +&apos;-&apos;+ MID( NDC_11__c, 6,3) +&apos;-&apos;+ RIGHT(NDC_11__c, 2)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDC - 11 (with Dashes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_Miss_Evaluation_Price__c</fullName>
        <label>Opty Miss Evaluation Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cetirizine</fullName>
                </value>
                <value>
                    <fullName>Diclofenac Gel</fullName>
                </value>
                <value>
                    <fullName>Esomeprazole</fullName>
                </value>
                <value>
                    <fullName>Famotidine 10mg</fullName>
                </value>
                <value>
                    <fullName>Famotidine 20mg</fullName>
                </value>
                <value>
                    <fullName>Fexofenadine</fullName>
                </value>
                <value>
                    <fullName>Fexofenadine-D</fullName>
                </value>
                <value>
                    <fullName>Guaifenesin</fullName>
                </value>
                <value>
                    <fullName>Habitrol</fullName>
                </value>
                <value>
                    <fullName>Lansoprazole</fullName>
                </value>
                <value>
                    <fullName>Levocetirizine</fullName>
                </value>
                <value>
                    <fullName>Lidocaine</fullName>
                </value>
                <value>
                    <fullName>Nicotine</fullName>
                </value>
                <value>
                    <fullName>Nicotine Lozenge</fullName>
                </value>
                <value>
                    <fullName>Olopatadine 0.1%</fullName>
                </value>
                <value>
                    <fullName>Olopatadine 0.2%</fullName>
                </value>
                <value>
                    <fullName>Omeprazole</fullName>
                </value>
                <value>
                    <fullName>Omeprazole Capsules</fullName>
                </value>
                <value>
                    <fullName>Ranitidine</fullName>
                </value>
                <value>
                    <fullName>Ranitidine 150mg</fullName>
                </value>
                <value>
                    <fullName>Ranitidine 75mg</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Amlo+Atorva</fullName>
                </value>
                <value>
                    <fullName>Nitroglycerine SL Tab</fullName>
                </value>
                <value>
                    <fullName>Ciprofloxacin Tabs</fullName>
                </value>
                <value>
                    <fullName>Omeprazole DR</fullName>
                </value>
                <value>
                    <fullName>Raloxifene</fullName>
                </value>
                <value>
                    <fullName>Isotretinoin NA</fullName>
                </value>
                <value>
                    <fullName>Fluconazole Tabs</fullName>
                </value>
                <value>
                    <fullName>Cinacalcet Tablets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Per_Unit__c</fullName>
        <label>Return Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Throughput_cost__c</fullName>
        <label>Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product History Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Throughput_cost__c</columns>
        <columns>WAC__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PHS-{0000}</displayFormat>
        <label>Product History Snapshot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product History Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>